Using new Java features (switch expressions, text blocks, new JDK methods)